--- a/css/style.css
+++ b/css/style.css
@@ -183,18 +183,18 @@ header {
 
 .hero-content h1 {
     font-family: 'Cabin Sketch';
-    font-size: 3em;
-    margin-bottom: 0.5em;
+    font-size: 5em;
+    margin-bottom: 0.2em;
     z-index: 5;
-    color: #4A4A4A; /* Dark Gray Text */
+    color: #AD0AFD; /* Dark Gray Text */
 }
 
 .hero-content h2 {
     font-family: 'Josefin Sans';
-    font-size: 3em;
+    font-size: 2em;
     margin-bottom: 0.5em;
     z-index: 5;
-    color: #4A4A4A; /* Dark Gray Text */
+    color: #cc69fd; /* Dark Gray Text */
 }
 
 .hero-content p {
