--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ header {
     display: flex;
     align-items: center;
     font-weight: bold;
+    font-family: 'Cabin Sketch';
 }
 
 .header-logo {
