--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ header {
 .hero {
     background: url('/img/sproutbg.png') no-repeat center center / cover;
     background-attachment: fixed;
-    position: relative;
+    position: top;
     max-width: 100%;
     padding-top: 1px;
     margin-top: -1px;
