fix fonts maybe

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @font-face {
     font-family: Blanka;
-    src: url("../stellar-sprouts/fonts/Blanka.otf") format('truetype');
+    src: url("../../stellar-sprouts/fonts/Blanka.otf") format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: Manifesto;
-    src: url("../stellar-sprouts/fonts/Manifesto.ttf") format('truetype');
+    src: url("../../stellar-sprouts/fonts/Manifesto.ttf") format('truetype');
     font-weight: bold;
     font-style: normal;
 }
